--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,53 @@
+server.port=8080
 
+spring.datasource.url=jdbc:mysql://localhost:3306/mail?characterEncoding=UTF-8
+spring.datasource.username=root
+spring.datasource.password=123456
+# druid连接池配置
+spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.datasource.filters=stat
+spring.datasource.maxActive=20
+spring.datasource.initialSize=1
+spring.datasource.maxWait=60000
+spring.datasource.minIdle=1
+spring.datasource.timeBetweenEvictionRunsMillis=60000
+spring.datasource.minEvictableIdleTimeMillis=300000
+spring.datasource.validationQuery=select 'x'
+spring.datasource.testWhileIdle=true
+spring.datasource.testOnBorrow=false
+spring.datasource.testOnReturn=false
+spring.datasource.poolPreparedStatements=true
+spring.datasource.maxOpenPreparedStatements=20
+
+# mybatis配置
+mybatis.mapper-locations=classpath:mapping/*.xml
+mybatis.type-aliases-package=com.jlszkxa.transfer.entity
+
+
+###producer
+#该应用是否启用生产者
+rocketmq.producer.isOnOff=on
+#发送同一类消息的设置为同一个group，保证唯一,默认不需要设置，rocketmq会使用ip@pid(pid代表jvm名字)作为唯一标示
+rocketmq.producer.groupName=demoGroup
+#mq的nameserver地址
+rocketmq.producer.namesrvAddr=127.0.0.1:9876
+#消息最大长度 默认1024*4(4M)
+rocketmq.producer.maxMessageSize=4096
+#发送消息超时时间,默认3000
+rocketmq.producer.sendMsgTimeout=3000
+#发送消息失败重试次数，默认2
+rocketmq.producer.retryTimesWhenSendFailed=2
+
+###consumer
+##该应用是否启用消费者
+rocketmq.consumer.isOnOff=on
+rocketmq.consumer.groupName=demoGroup
+#mq的nameserver地址
+rocketmq.consumer.namesrvAddr=127.0.0.1:9876
+#该消费者订阅的主题和tags("*"号表示订阅该主题下所有的tags),格式：topic~tag1||tag2||tag3;topic2~*;
+rocketmq.consumer.topics=DemoTopic~*;
+rocketmq.consumer.consumeThreadMin=20
+rocketmq.consumer.consumeThreadMax=64
+#设置一次消费消息的条数，默认为1条
+rocketmq.consumer.consumeMessageBatchMaxSize=1
