--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -51,3 +51,22 @@ rocketmq.consumer.consumeThreadMin=20
 rocketmq.consumer.consumeThreadMax=64
 #设置一次消费消息的条数，默认为1条
 rocketmq.consumer.consumeMessageBatchMaxSize=1
+
+# Redis数据库索引（默认为0）
+spring.redis.database=0
+# Redis服务器地址
+spring.redis.host=localhost
+# Redis服务器连接端口
+spring.redis.port=6379
+# Redis服务器连接密码（默认为空）
+spring.redis.password=
+# 连接池最大连接数（使用负值表示没有限制）
+spring.redis.pool.max-active=200
+# 连接池最大阻塞等待时间（使用负值表示没有限制）
+spring.redis.pool.max-wait=-1
+# 连接池中的最大空闲连接
+spring.redis.pool.max-idle=10
+# 连接池中的最小空闲连接
+spring.redis.pool.min-idle=0
+# 连接超时时间（毫秒）
+spring.redis.timeout=1000
