--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -52,21 +52,24 @@ rocketmq.consumer.consumeThreadMax=64
 #设置一次消费消息的条数，默认为1条
 rocketmq.consumer.consumeMessageBatchMaxSize=1
 
-# Redis数据库索引（默认为0）
-spring.redis.database=0
+# redis配置
 # Redis服务器地址
-spring.redis.host=localhost
+spring.redis.host=127.0.0.1
 # Redis服务器连接端口
 spring.redis.port=6379
-# Redis服务器连接密码（默认为空）
-spring.redis.password=
+# Redis服务器连接密码
+#spring.redis.password=123456
 # 连接池最大连接数（使用负值表示没有限制）
-spring.redis.pool.max-active=200
+spring.redis.jedis.pool.max-active=1000
 # 连接池最大阻塞等待时间（使用负值表示没有限制）
-spring.redis.pool.max-wait=-1
+spring.redis.jedis.pool.max-wait=-1
 # 连接池中的最大空闲连接
-spring.redis.pool.max-idle=10
+spring.redis.jedis.pool.max-idle=10
 # 连接池中的最小空闲连接
-spring.redis.pool.min-idle=0
+spring.redis.jedis.pool.min-idle=5
 # 连接超时时间（毫秒）
-spring.redis.timeout=1000
+spring.redis.timeout=5000
+
+# log配置
+logging.level.root=WARN
+logging.level.org.springframework.web=WARN
