--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -33,7 +33,7 @@ rocketmq.producer.groupName=demoGroup
 #mq的nameserver地址
 rocketmq.producer.namesrvAddr=127.0.0.1:9876
 #消息最大长度 默认1024*4(4M)
-rocketmq.producer.maxMessageSize=4096
+rocketmq.producer.maxMessageSize=4096000
 #发送消息超时时间,默认3000
 rocketmq.producer.sendMsgTimeout=3000
 #发送消息失败重试次数，默认2
